fix: 调整tab wrap-class位置及cascader review细节问题

--- a/packages/cascader/index.less
+++ b/packages/cascader/index.less
@@ -68,10 +68,6 @@
     }
   }
 
-  &__selected-icon {
-    font-size: @cascader-selected-icon-size !important;
-  }
-
   &__options {
     box-sizing: border-box;
     height: @cascader-options-height;
